# PieEngine

./: .gitignore  Cargo.toml  README.md  pie-engine-future-systems.md  pie-engine-milestones-and-plan.md  pie-engine-project-brief.md  pie-engine-v1-checklist.md
.claude/: settings.local.json
.github/workflows/: ci.yml
Task/: design-conversion-prompt.md
assets/Engine/: README.md  manifest.toml
assets/Engine/Gizmos/: GizmosMoveTool.fbx  GizmosMoveTool.json  GizmosSphere.fbx  GizmosSphere.json
assets/sample/: scene.gltf
assets/shaders/: cloud_billboard.wgsl  debug_line.wgsl  gizmo_mesh.wgsl  resolve_hdr.wgsl  sky_atmosphere.wgsl  textured_mesh.wgsl
pie_editor/: Cargo.toml
pie_editor/src/: cloud_noise.rs  dock_layout.rs  fly_camera.rs  gizmo.rs  main.rs  picking.rs  theme.rs  ui.rs  ui_components.rs  viewport_renderer.rs
pie_runtime/: Cargo.toml
pie_runtime/src/: components.rs  core.rs  frame_alloc.rs  lib.rs  logging.rs  loop_runner.rs  main.rs  net.rs  platform.rs  profiling.rs
pie_runtime/src/assets/: error.rs  handle.rs  material.rs  mesh.rs  mod.rs  pak.rs  registry.rs  scene_import.rs  texture.rs
pie_runtime/src/assets/loader/: fbx.rs  gltf.rs  image.rs  mod.rs  pak.rs  pie_mesh.rs  shader.rs
pie_runtime/src/rendering/: camera.rs  client_app.rs  loading_screen.rs  mod.rs  renderer.rs  sample_scene.rs
pie_runtime/tests/: bench.rs
pie_tools/: Cargo.toml
pie_tools/src/: cooker.rs  main.rs  pak.rs
