[workspace]
members = ["pie_runtime", "pie_editor", "pie_tools"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
glam = "0.30"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
hecs = "0.10"
egui = "0.31"
winit = "0.30"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
gltf = "1.4"
image = "0.25"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
