[workspace]
members = ["pie_runtime", "pie_editor", "pie_tools"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
glam = "0.30"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
hecs = "0.10"
egui = "0.31"
winit = "0.30"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
gltf = "1.4"
image = "0.25"
flate2 = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = "0.11"
mimalloc = "0.1"
bumpalo = "3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
