[package]
name = "pie_editor"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
pie_runtime = { path = "../pie_runtime" }
egui = { workspace = true }
egui-wgpu = { version = "0.31", features = ["winit"] }
egui-winit = "0.31"
bytemuck = { workspace = true }
glam = { workspace = true }
hecs = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
