[package]
name = "pie_runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["rendering"]
rendering = ["dep:winit", "dep:wgpu", "dep:pollster"]
cooked-assets = []
# Deep-dive profiling via tracing/tracy. Zero-cost when disabled: the
# `profile_span!` macro expands to nothing and no tracing crates are pulled in.
# When enabled, install a subscriber (e.g. `profiling::init_tracy_subscriber()`)
# to emit spans to Tracy or any tracing-compatible backend.
profiling = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-tracy"]

[dependencies]
glam.workspace = true
ctrlc.workspace = true
hecs.workspace = true
gltf.workspace = true
image.workspace = true
flate2.workspace = true
serde_json.workspace = true
bytemuck.workspace = true
winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }
